# fastapi-next

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/dao/: base.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: ca09d92dc3d6_initial_migration.py
backend/app/users/: auth.py  dao.py  models.py  router.py  schemas.py
frontend/my-app/: Dockerfile
nginx/: nginx.conf
